unpackaged/main/default/objects/zkfedex__CustomSetting__c/zkfedex__CustomSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Stores FedEx custom settings</description>
    <label>FedEx Custom Setting</label>
</CustomObject>