unpackaged/main/default/objects/zkfedex__CustomSetting__c/fields/zkfedex__CheckboxValue__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__CheckboxValue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkbox Value</label>
    <type>Checkbox</type>
</CustomField>