unpackaged/main/default/objects/zkfedex__CustomSetting__c/fields/zkfedex__DateTimeValue__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__DateTimeValue__c</fullName>
    <label>DateTime Value</label>
    <type>DateTime</type>
</CustomField>