unpackaged/main/default/objects/zkfedex__CustomSetting__c/fields/zkfedex__DateValue__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__DateValue__c</fullName>
    <label>Date Value</label>
    <type>Date</type>
</CustomField>