unpackaged/main/default/objects/zkfedex__CustomSetting__c/fields/zkfedex__NumberValue__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__NumberValue__c</fullName>
    <label>Number Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>